src/client/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    @apply bg-gray-50 text-gray-900;
    -webkit-tap-highlight-color: transparent;
  }
  input, select, button {
    @apply text-base;
    touch-action: manipulation;
  }
}

